# family_photo

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODING_STANDARDS.md  README.md  SESSION_STATUS.md  TEST_PLAN.md  pyproject.toml
.codex/: config.toml
documentation/: preliminary_design.md
sql/migrations/: 001_initial_schema.sql  002_detection_ocr_support.sql  003_photo_export_disposition.sql  004_ocr_requests.sql  005_remove_detection_review_queue.sql
src/: app_logging.py  cli.py  config.py  photo_models.py  photo_repository.py
src/audit/: eval_service.py  fix_service.py  import_service.py  merge_detection.py  models.py  service.py  split_review_service.py
src/crop/: __init__.py  models.py  repository.py  service.py
src/db/: connection.py  schema.py
src/deskew/: __init__.py  service.py
src/detection/: analysis.py  models.py  ocr.py  repository.py  service.py
src/disposition/: service.py
src/enhance/: __init__.py  service.py
src/frame_export/: error_service.py  service.py
src/ingest/: discovery.py  models.py  repository.py  service.py
src/orientation/: __init__.py  service.py
src/pipeline/: service.py  types.py
src/reset/: __init__.py  service.py
src/review/: models.py  repository.py  service.py
tests/: README.md  conftest.py
tests/e2e/: test_pipeline_smoke.py
tests/integration/: test_cli_entrypoints.py  test_run_process.py  test_run_review_slice.py  test_run_until_review.py
tests/unit/: test_app_logging.py  test_audit_eval_service.py  test_audit_fix_service.py  test_audit_import_service.py  test_audit_service.py  test_cli_status.py  (+11 more)
(+88 files in other folders)
